--- a/resources/style.css
+++ b/resources/style.css
@@ -3,6 +3,14 @@ html{
   font-family: Helvetica;
 
 }
-#header{
-  background-image: url("./resources/images/the-flatiron-building.png");
+.Header{
+  background-image: url(images/the-flatiron-building.png);
+  color: white;
+}
+
+.Footer{
+  background-color: dimgray;
+  text-align: left;
+  font-size: 11px
+  color: white;
 }
